Fix the wrong color of the theme icon

--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -205,11 +205,7 @@
 #theme_btn svg {
   width: 24px;
   height: 24px;
-  fill: currentColor;
-}
-
-#darkIcon #lightIcon{
-  color: $text-color;
+  fill: $text-color;
 }
 
 /* Media queries remain the same */
